--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
 .sidebar {
     width: 280px;
@@ -79,4 +80,8 @@
 
 .font-lato {
     font-family: Lato,sans-serif,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell;
+}
+
+body {
+    font-family: Poppins, Lato,sans-serif,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell;
 }
