ok booking done
- bro why did that take so long  ;-;
- it was not that hard, but damn did it take a ton of deliberation

--- a/public_html/assets/css/invoice.css
+++ b/public_html/assets/css/invoice.css
@@ -89,3 +89,19 @@
 .invoice-box.rtl table tr td:nth-child(2) {
     text-align: left;
 }
+
+
+@media print {
+    body * {
+        visibility: hidden;
+    }
+    .card-body * {
+        visibility: visible;
+    }
+    #sidebar, .navbar, footer * {
+        display: none;
+    }
+    .card-body {
+        page-break-inside: avoid;
+    }
+}
