a whole bunch of stuff done
- everything seem to be mostly done at this point
- dashboard fixed
- user dashboard still iffy tho

--- a/public_html/assets/css/invoice.css
+++ b/public_html/assets/css/invoice.css
@@ -95,7 +95,7 @@
     body * {
         visibility: hidden;
     }
-    .card-body * {
+    #invoice * {
         visibility: visible;
     }
     #sidebar, .navbar, footer * {
