--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -4,12 +4,13 @@
     width: 280px;
 }
 
+
 .icon-red {
     color: red;
     font-weight: bold;
 }
 
-.icon-red:hover {
+.icon-red.interact:hover {
     color: #b90000;
 }
 
