book kinda fixed
- fr this time

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -86,3 +86,10 @@
 body {
     font-family: Poppins, Lato,sans-serif,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell;
 }
+
+.btn-red {
+    background: #f30000;
+}
+.btn-red:hover {
+    background: #be0000;
+}
