--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -52,9 +52,6 @@
     color: #800080; /* Purple */
     font-weight: bold;
     text-decoration: none;
-    background-color: #F5F5F5;
-    padding: 5px;
-    border-radius: 3px;
 }
 
 /*flight status*/
@@ -65,7 +62,7 @@
 
 .in-progress {
     color: #008000; /* Green */
-    font-style: italic;
+    white-space: nowrap;
     font-weight: bold;
 }
 
