--- a/public_html/assets/css/bootstrap-start.css
+++ b/public_html/assets/css/bootstrap-start.css
@@ -10834,7 +10834,7 @@ html {
 }
 
 .bg-gradient-primary-to-secondary {
-  background: linear-gradient(45deg, #2937f0, #9f1ae2) !important;
+  background: linear-gradient(45deg, #f02929, #e72c49) !important;
 }
 
 .font-alt {
