--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -92,6 +92,22 @@ body {
     border-color: #ff2424;
 }
 
+.submit-red {
+    width: 100%;
+    height: 50px;
+    background: #ff2424;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+    transition: 0.5s;
+    border: none;
+}
+.submit-red:hover {
+    border-color: #ff2424;
+}
 
 .problem {
     color: #FF0000; /* Red */
